--- a/about/index.html
+++ b/about/index.html
@@ -9,7 +9,8 @@
 <meta name="description" content="I&amp;rsquo;m LIL NIX x_x ! A hacker (actually a bug hunter),
 I started programming since 2016 and hacking since 2019.
 I usually listen to Eminem, 2pac and other rap legends.
-LIL NIX loves web hacking a lot and his favorite vulnerabilities are IDOR and SSRF." />
+LIL NIX loves web hacking a lot and his favorite vulnerabilities are XSS, IDOR and SSRF.
+Think out of ▢ !" />
 <meta name="keywords" content="" />
 <meta name="robots" content="noodp" />
 <link rel="canonical" href="/about/" />
@@ -47,7 +48,8 @@ LIL NIX loves web hacking a lot and his favorite vulnerabilities are IDOR and SS
 <meta property="og:description" content="I&amp;rsquo;m LIL NIX x_x ! A hacker (actually a bug hunter),
 I started programming since 2016 and hacking since 2019.
 I usually listen to Eminem, 2pac and other rap legends.
-LIL NIX loves web hacking a lot and his favorite vulnerabilities are IDOR and SSRF." />
+LIL NIX loves web hacking a lot and his favorite vulnerabilities are XSS, IDOR and SSRF.
+Think out of ▢ !" />
 <meta property="og:url" content="/about/" />
 <meta property="og:site_name" content="X_X" />
 
@@ -179,7 +181,8 @@ LIL NIX loves web hacking a lot and his favorite vulnerabilities are IDOR and SS
         <p>I&rsquo;m <strong>LIL NIX</strong> x_x ! A hacker (actually a bug hunter),</p>
 <p>I started programming since 2016 and hacking since 2019.</p>
 <p>I usually listen to Eminem, 2pac and other rap legends.</p>
-<p><strong>LIL NIX</strong> loves web hacking a lot and his favorite vulnerabilities are IDOR and SSRF.</p>
+<p><strong>LIL NIX</strong> loves web hacking a lot and his favorite vulnerabilities are XSS, IDOR and SSRF.</p>
+<p>Think out of ▢ !</p>
 
       </div></div>
 
